--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -31,7 +31,12 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-app?usertype=judiciary&">Active tasks - Next steps - do the task</a><br> - v3.3</p>
         <p><a target="_blank" href="/workallocation/pages/wa-app-confirmation?usertype=judiciary&">Active tasks - task complete</a><br>Checked with DS - v3.3</p>
 
-        <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Active tasks - task complete - return tp task tab</a><br>Checked with DS - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-c?usertype=judiciary&">Active tasks - task complete - return to task tab</a><br>Checked with DS - v3.3</p>
+
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=judiciary&">Reassign task - manage open </a><br>Checked with DS - v3.3</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
+        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
 
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=judiciary&">Available tasks - tab</a><br>Checked with DS - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-reset?usertype=judiciary&">Available tasks - tab - Reset sorting</a><br>Checked with DS - v3.3</p>
@@ -59,9 +64,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=judiciary&">My tasks - Unassign</a><br>Checked with DS - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/lms?usertype=judiciary&">Unassign task - Unassign</a><br> - v3.3 </p>
         <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=judiciary&">Unassigned task - Unassign</a><br>Checked with DS - v3.3</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign?usertype=judiciary&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
-        <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=judiciary&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
-        <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=judiciary&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
+
 
         <!-- SECTION BREAK -->
 
@@ -290,7 +293,12 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-app?usertype=staff&">Active tasks - Next steps - do the task</a><br> - v3.3</p>
     <p><a target="_blank" href="/workallocation/pages/wa-app-confirmation?usertype=staff&">Active tasks - task complete</a><br>Checked with DS - v3.3</p>
 
-    <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Active tasks - task complete - return tp task tab</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00321-2018-c?usertype=staff&">Active tasks - task complete - return to task tab</a><br>Checked with DS - v3.3</p>
+
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=staff&">Reassign task - manage open </a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign?usertype=staff&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=staff&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=staff&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
 
     <p><a target="_blank" href="/workallocation/pages/wa-available-tasks?usertype=staff&">Available tasks - tab</a><br>Checked with DS - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-available-tasks-reset?usertype=staff&">Available tasks - tab - Reset sorting</a><br>Checked with DS - v3.3</p>
@@ -318,9 +326,7 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ao?usertype=staff&">My tasks - Unassign</a><br>Checked with DS - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/lms?usertype=staff&">Unassign task - Unassign</a><br> - v3.3 </p>
     <p><a target="_blank" href="/workallocation/pages/wa-mytasks-u?usertype=staff&">Unassigned task - Unassign</a><br>Checked with DS - v3.3</p>
-    <p><a target="_blank" href="/workallocation/pages/reassign?usertype=staff&">Reassign task - Find the judge</a><br>Checked with DS - v3.3 - updated H1s</p>
-    <p><a target="_blank" href="/workallocation/pages/reassign-b?usertype=staff&">Reassign task - Check your changes</a><br>Checked with DS - v3.3 - updated H1s</p>
-    <p><a target="_blank" href="/workallocation/pages/wa-mytasks-r?usertype=staff&">My task - Reassigned</a><br>Checked with DS - v3.3</p>
+
 
     <!-- SECTION BREAK -->
 
