--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -122,7 +122,8 @@ GOV.UK Prototype Kit
         <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
         <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
     <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=judiciary&">My access</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
-        <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
+      <p><a target="_blank" href="/caseaccess/pages/ma-tcrvdr?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected - default rejection message<br><span style="color: red">*Reinstated</span></p>
+        <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected - with comments<br><span style="color: red">*Reinstated</span></p>
 
 <!--
        <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
@@ -245,7 +246,8 @@ GOV.UK Prototype Kit
           <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
           <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
-          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
+          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvdr?usertype=staff&">View details</a><br>Specifc access - Flow rejected - default rejection message<br><span style="color: red">*Reinstated</span></p>
+            <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected - with comments<br><span style="color: red">*Reinstated</span></p>
   <!--        <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=staff&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=staff&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p> -->
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
