--- a/app/views/caseaccess/pages/myaccess-tcr.html
+++ b/app/views/caseaccess/pages/myaccess-tcr.html
@@ -64,7 +64,7 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>{{ now |  date("subtract", 0, "day") | date( "D MMMM YYYY" ) }}</strong></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Not granted </strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Not authorised </strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong> </strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="ma-tcrvd" class="right_m">View</a></td>
               </
