full stop added

--- a/app/views/searchcases/transition/search.html
+++ b/app/views/searchcases/transition/search.html
@@ -81,7 +81,7 @@ Case details
     </div>
 
 <!-- TEMPORARY TEXT FOR DUEL RUNNING -->
-    <p style="margin-bottom: 20px;">You can search: Contested Financial Remedy, Financial Remedy Consented </p>
+    <p style="margin-bottom: 20px;">You can search: Contested Financial Remedy, Financial Remedy Consented.</p>
 
 
 
