--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-dur.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-dur.html
@@ -12,7 +12,7 @@ Case details
 {% endblock %}
 {% block content %}
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Allocate a case manager</span>
+  <span class="govuk-caption-l">Allocate a legal ops case manager</span>
           Duration of role
 </h1>
 <div class="govuk-form-group">
