--- a/app/views/workallocation/pages/wa-PA-00467-2017-alor-ftpj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-alor-ftpj.html
@@ -13,7 +13,7 @@ Case details
 {% block content %}
 
 <h1 class="govuk-heading-l">
-  <span class="govuk-caption-l">Allocate a case manager</span>
+  <span class="govuk-caption-l">Allocate a legal ops case manager</span>
           Find the person
 </h1>
 
