--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -157,9 +157,6 @@ GOV.UK Prototype Kit
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-6?usertype=judiciary&">Roles and access - Add an exclusion - Check details</a><br>Checked with DS - v3.3  - updated H1s</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=judiciary&">Roles and access - Add an exclusion - Complete</a><br>Checked with DS - v3.3</p>
 <p><a target="_blank" href="/workallocation/pages/wa-mytasks-ex?usertype=jud iciary&">My tasks - Excluded self</a><br>Checked with DS - v3.3</p>
-
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-del?usertype=judiciary&">Roles and access - Delete an exclusion </a><br>Checked with DS - v3.3</p>
-<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ardel?usertype=judiciary&">Roles and access - Delete an exclusion - completed</a><br>Checked with DS - v3.3</p>
 <!-- SECTION BREAK -->
 
 <h2 class="govuk-heading-l">Allocate Legal Ops role (Judicial)</h2>
@@ -171,6 +168,14 @@ GOV.UK Prototype Kit
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-durj?usertype=judiciary&">Duration of role</a><br>Checked with DS - v3.3  - updated H1s</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chkj?usertype=judiciary&">Check your allocation</a><br>Checked with DS - v3.3  - updated H1s</p>
 <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-lo?usertype=judiciary&">Role allocated</a><br>Checked with DS - v3.3</p>
+
+<h2 class="govuk-heading-l">Delete an exclusion</h2>
+<div class="xui-alert-link__number">6c</div>
+<div class="govuk-!-padding-bottom-6"></div>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=judiciary&">Roles and access - Delete an exclusion Start</a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-del?usertype=judiciary&">Roles and access - Delete an exclusion </a><br>Checked with DS - v3.3</p>
+<p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ardel?usertype=judiciary&">Roles and access - Delete an exclusion - completed</a><br>Checked with DS - v3.3</p>
+
 
 <p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p>
 
@@ -440,6 +445,15 @@ GOV.UK Prototype Kit
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-chk?usertype=staff&">Check your allocation</a><br>Checked with DS - v3.3  - updated H1s</p>
     <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-alor-lo?usertype=staff&">Role allocated</a><br>Checked with DS - v3.3</p>
 
+    <h2 class="govuk-heading-l">Delete an exclusion</h2>
+    <div class="xui-alert-link__number">6c</div>
+    <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-arex?usertype=staff&">Roles and access - Delete an exclusion Start</a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-coi-del?usertype=staff&">Roles and access - Delete an exclusion </a><br>Checked with DS - v3.3</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-PA-00467-2017-ardel?usertype=staff&">Roles and access - Delete an exclusion - completed</a><br>Checked with DS - v3.3</p>
+
+
+    <p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p><p class="govuk-!-padding-bottom-2"></p>
 
     <h2 class="govuk-heading-l">My cases</h2>
     <div class="xui-alert-link__number">7 </div>
