add missing page

--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -32,8 +32,8 @@ Refunds
           classes: "govuk-tag--grey"
         })}} </td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">
-            <a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn">Review case</a> &nbsp;
-            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?state=withdrawn">Process refund</a>
+            <a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?casetype=civil&state=withdrawn">Review case</a> &nbsp;
+            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?casetype=civil&state=withdrawn">Process refund</a>
           </td>
         </tr>
 
@@ -47,8 +47,8 @@ Refunds
           classes: "govuk-tag--grey"
         })}}</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">
-            <a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=remission">Review case</a> &nbsp;
-            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?state=remission">Process refund</a>
+            <a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?casetype=civil&state=remission">Review case</a> &nbsp;
+            <a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/review-approve?casetype=civil&state=remission">Process refund</a>
           </td>
         </tr>
 
