--- a/app/views/workallocation/pages/wa-mytasks-refunds.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds.html
@@ -29,10 +29,10 @@ Refunds
           text: now | date( 'subtract', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=divorce">Review case</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=civil&result=returned">Review case</a></td>
         </tr>
 
-
+<!-- 
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">3164-1234-5845-4819</td>
           <td class="govuk-table__cell">Remission granted</a>
@@ -40,8 +40,9 @@ Refunds
           text: now | date( 'subtract', 5, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}}</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=remission&casetype=divorce">Review case</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=remission&casetype=civil">Review case</a></td>
         </tr>
+  -->
         
       </tbody>
     </table>
