--- a/app/views/workallocation/pages/caselist-civil.html
+++ b/app/views/workallocation/pages/caselist-civil.html
@@ -108,7 +108,7 @@ Case details
 
             <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw?casenumberselected=3689-2642-5857-7069&caseadded=false&">3689-2642-5857-7069</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3689-2642-5857-7069</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Cardiff</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -116,7 +116,7 @@ Case details
             </tr>
 
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw?casenumberselected=1593-0136-4696-9976&caseadded=false&">1593-0136-4696-9976</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">1593-0136-4696-9976</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">London East</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -124,7 +124,7 @@ Case details
             </tr>
 
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailspubliclaw?casenumberselected=3827-2010-3565-3933&caseadded=false&">3827-2010-3565-3933</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3827-2010-3565-3933</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">midlands East</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -148,21 +148,21 @@ Case details
 
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration?casenumberselected=DRAFT&caseadded=false&">DRAFT</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">DRAFT</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne Yang</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal started</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration?casenumberselected=DRAFT&caseadded=false&">DRAFT</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">DRAFT</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel Williams</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal started</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsimmigration?casenumberselected=3827-2010-3565-3933&caseadded=false&">3827-2010-3565-3933</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3827-2010-3565-3933</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Norman Jones</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Appeal submitted</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16"></td>
@@ -187,7 +187,7 @@ Case details
 
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsfinancialremedy?casenumberselected=3689264258577069&caseadded=false&">3689-2642-5857-7069</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3689-2642-5857-7069</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">AY-34137102</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Anne</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Yang</td>
@@ -196,7 +196,7 @@ Case details
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsfinancialremedy?casenumberselected=1593013646969976&caseadded=false&">1593-0136-4696-9976</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">1593-0136-4696-9976</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">AY-34137102</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Ethel</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Williams</td>
@@ -206,7 +206,7 @@ Case details
                 </tr>
 
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsfinancialremedy?casenumberselected=3827201035653933&caseadded=false&">3827-2010-3565-3933</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3827-2010-3565-3933</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">NJ-7982475</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Norman</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jones</td>
@@ -232,7 +232,7 @@ Case details
                 <tbody class="govuk-table__body">
                 {% if data.caseadded == 'true' %}
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?&newcaseselected=true&divorcename=Narran vs Beth&">{{ data.casenumber }}</a></td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">{{ data.casenumber }}</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Apr 2020, 9:50:28 AM</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Martin Narran</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Beth King</td>
@@ -244,7 +244,7 @@ Case details
                 {% if data.hideone == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3689264258577069&casenumberselectedccdformat=3689-2642-5857-7069&newcaseselected=false&divorcename=Smith vs Blythe&casetohide=a&clientname=James Smith&">3689-2642-5857-7069</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3689-2642-5857-7069</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">5 Feb 2020, 9:50:28 AM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">James Smith</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Jane Blythe</td>
@@ -256,7 +256,7 @@ Case details
                 {% if data.hidetwo == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=1593013646969976&casenumberselectedccdformat=1593-0136-4696-9976&newcaseselected=false&divorcename=Hoyle vs King&casetohide=b&clientname=Mary Hoyle&">1593-0136-4696-9976</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">1593-0136-4696-9976</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">12 Mar 2020, 1:48:33 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Mary Hoyle</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Daniel King</td>
@@ -268,7 +268,7 @@ Case details
                 {% if data.hidethree == 'true' %}
                 {% else %}
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetailsdivorce?casenumberselected=3827201035653933&casenumberselectedccdformat=3827-2010-3565-3933&newcaseselected=false&divorcename=Higham vs Higham&casetohide=c&clientname=Neil Higham&">3827-2010-3565-3933</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3827-2010-3565-3933</a></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">2 Dec 2019, 4:23:50 PM</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Neil Higham</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-16">Sarah Higham</td>
