--- a/app/views/caseaccess/pages/available-tasks-opt2.html
+++ b/app/views/caseaccess/pages/available-tasks-opt2.html
@@ -12,9 +12,9 @@ My work
                <h1 class="govuk-heading-xl">My work</h1>
           </div>
     </div>
-    <p>See your tasks and view tasks available for you to pick up.</p>
+    <p>Access tasks and cases.</p>
     {{ govukButton({
-  text: "Filter my work",
+  text: "Show work filter",
   classes: "govuk-button--secondary"
 }) }}
     <div class="hmcts-scrollable-pane">
