post-testing updates

--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -5,7 +5,13 @@ Refunds
 {% block content %}
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
-    <h1 class="govuk-heading-xl">Refunds to be approved</h1>
+    <h1 class="govuk-heading-xl">Refund list</h1>
+  </div>
+</div>
+
+<div class="hmcts-page-heading">
+  <div class="hmcts-page-heading__title">
+    <h2 class="govuk-heading-l">Refunds to be approved</h2>
   </div>
 </div>
 
@@ -71,6 +77,58 @@ Refunds
         
       </tbody>
     </table>
+
+<br />
+
+<div class="hmcts-page-heading">
+  <div class="hmcts-page-heading__title">
+    <h2 class="govuk-heading-l">Refunds to be processed</h2>
+  </div>
+</div>
+
+<div class="hmcts-scrollable-pane">
+  <div class="hmcts-scrollable-pane__wrapper">
+    <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> refunds</p>
+    <table class="govuk-table ">
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case ID</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Reason</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date updated</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Action</button></th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-4819</td>
+          <td class="govuk-table__cell">Case withdrawn</a>
+          <td class="govuk-table__cell">{{govukTag({
+          text: now | date( 'subtract', 2, 'days' ) | date,
+          classes: "govuk-tag--grey"
+        })}} </td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=civil&result=returned">Review case</a></td>
+        </tr>
+
+<!-- 
+        <tr class="govuk-table__row">
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">3164-1234-5845-4819</td>
+          <td class="govuk-table__cell">Remission granted</a>
+          <td class="govuk-table__cell"> {{govukTag({
+          text: now | date( 'subtract', 5, 'days' ) | date,
+          classes: "govuk-tag--grey"
+        })}}</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=remission&casetype=civil">Review case</a></td>
+        </tr>
+  -->
+        
+      </tbody>
+    </table>
+
+
+
+
+
+
     {% endblock %}
     {% block scripts %}
     {% endblock %}
