--- a/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
+++ b/app/views/workallocation/pages/wa-mytasks-refunds-approval.html
@@ -82,31 +82,46 @@ Refunds
 
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
-    <h2 class="govuk-heading-l">Refunds to be processed</h2>
+    <h2 class="govuk-heading-l">Refunds returned from approval</h2>
   </div>
 </div>
 
 <div class="hmcts-scrollable-pane">
   <div class="hmcts-scrollable-pane__wrapper">
-    <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> refunds</p>
+    <p class="govuk-body" style="float: left">Displaying <strong>3</strong> of <strong>3</strong> refunds</p>
+
+    <div class="govuk-form-group" style="float: right">
+      <label class="govuk-label" for="sort" style="display: inline-block; margin-right: 10px">
+        Filter by caseworker:
+      </label>
+      <select class="govuk-select" id="sort" name="sort">
+        <option>All caseworkers</option>
+        <option>Steve Smith</option>
+        <option>Tom Jones</option>
+      </select>
+    </div>
+
+
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case ID</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Reason</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Submitted by</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date updated</button></th>
-          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Action</button></th>
+          <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 26%" aria-sort="none"><button type="button" data-index="1">Action</button></th>
         </tr>
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-4819</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">4692-3164-5845-1567</td>
           <td class="govuk-table__cell">Case withdrawn</a>
+          <td class="govuk-table__cell">Tom Jones</a>
           <td class="govuk-table__cell">{{govukTag({
           text: now | date( 'subtract', 2, 'days' ) | date,
           classes: "govuk-tag--grey"
         })}} </td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/v1caseinccd?state=withdrawn&casetype=civil&result=returned">Review case</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="https://fees-and-payments.herokuapp.com/orders/pages/refund/view-refund?result=returned&refund=adHoc">Review refund</a></td>
         </tr>
 
 <!-- 
